Make the service own generation job creation
